@@ -1,7 +1,6 @@
 Items considered for next release:
  * Print "Use /help" message on first connect after start?
  * Improve /help, allow /help <cmd>, /help <option>, /help commands, /help options.
- * Improve /listopts output.
  * Make mooproxy send MCP to the server setting the linelength to 80 if the connecting client is not MCP capable [from: bram]
  * More features for /recall (non-re, case sensitive, count, limit, etc)
  * Better RE support for /recall
