@@ -1,5 +1,6 @@
 - autoreconnect setten vanuit user heeft nu onmiddelijk effect
 - /get en /set weg, gebruik /option
+- /listopts geeft nu ook values terug.
 
 
 
